--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,7 +97,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>    
-                                    <%for(var i=0; i<9; i++){%>
+                                    <%for(var i=0; i< userinfo.length; i++){%>
                                         <tr>
                                             <td><%=i+1%>위</td>
                                             <td><%=userinfo[i].point%></td>
