--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
                     <div class="col-md-4 col-sm-6" style="position: relative">    
                         <div class="text-center card-box" >
                             <div class="member-card" style="height:250px">
-                                <img src="/upload/profile/<%=medinfo[i].image%>">
+                                <img src="/upload/med/<%=medinfo[i].image%>">
                                 <p class="text-muted font-13 text-center text-dark" style="font-size:18px; font-weight:bold"><span class="m-l-15 text-center"><%=medinfo[i].title%></span></p>
                                 <p class="text-muted font-13 text-center text-dark" style="font-size:14px"><span class="m-l-15 text-center"><%=medinfo[i].summary%></span></p>
                                 <div class="text-left m-t-10" style="position: absolute; bottom:20px;">    
