--- a/views/med.ejs
+++ b/views/med.ejs
@@ -24,10 +24,15 @@
                         <div class="m-t-20">
                             <a href="/med/new" class="btn btn-danger btn-custom btn-block waves-effect waves-light">새로 등록하기</a>
                             
-                            <form action='/med' method='post'>
+                            
                             <div class="list-group mail-list  m-t-20">
-                                <input type="submit" value="1" name="which" class="list-group-item b-0"><i class="fa fa-download m-r-10"></i>금액높은순
-                                <input type="submit" value="2" name="which" class="list-group-item b-0"><i class="fa fa-star-o m-r-10"></i>금액낮은순
+                                <form action='/med' method='post'>
+                                    <input type="hidden" value=1><input value="금액높은순" type="submit" name="which" class="list-group-item b-0"><i class="fa fa-download m-r-10"></i>
+                                </form>
+                                <form>
+                                    <input type="hidden" value=1><input value="금액낮은순" type="submit" name="which" class="list-group-item b-0"><<i class="fa fa-star-o m-r-10"></i>
+                                </form>    
+                                <input type="submit" value="2" name="which" class="list-group-item b-0">금액낮은순
                                 <input type="submit" value="3"  name="which" class="list-group-item b-0"><i class="fa fa-file-text-o m-r-10"></i>최신등록순
                                 <input type="submit" value="4" name="which" class="list-group-item b-0"><i class="fa fa-paper-plane-o m-r-10"></i>금액높은순
                             </form>
