--- a/views/med_per.ejs
+++ b/views/med_per.ejs
@@ -81,8 +81,8 @@
                                     <p><b><%=data.summary%></b></p>
                                     <%=data.content%>
                                     <hr/>
-
-                                    <h4> <i class="fa fa-paperclip m-r-10 m-b-10"></i> Attachments <span>(3)</span> </h4>
+                                    <img src="/upload/med/<%=data.image%>">
+                                    <!--h4> <i class="fa fa-paperclip m-r-10 m-b-10"></i> Attachments <span>(3)</span> </h4>
 
                                     <div class="row">
                                         <div class="col-sm-2 col-xs-4">
@@ -94,7 +94,7 @@
                                         <div class="col-sm-2 col-xs-4">
                                             <a href="#"> <img src="/images/small/img3.jpg" alt="attachment" class="img-thumbnail img-responsive"> </a>
                                         </div>
-                                    </div>
+                                    </div-->
                                 </div>
                                 
                                 <div class="text-right">
