--- a/views/my_show.ejs
+++ b/views/my_show.ejs
@@ -167,6 +167,9 @@
                                             </div>
                                             <button class="btn btn-primary waves-effect waves-light w-md" type="submit">Save</button>
                                         </form>
+                                        <!--form action="/my?_method=delete" method="post">
+                                            <button class="btn btn-primary waves-effect waves-light w-md" type="submit">탈퇴</button>
+                                        </form-->
                                     </div>
                                 </div>
                             </div>
