--- a/views/med_per.ejs
+++ b/views/med_per.ejs
@@ -98,7 +98,9 @@
                                 </div>
                                 
                                 <div class="text-right">
-                                   <% if(data.writer_id == user.writer_id) {%>
+                                   <% 
+                                   console.log(data);
+                                   if(data.writer_id == user.uid) {%>
                                     <button type="submit" class="btn btn-primary waves-effect waves-light w-md m-b-30" onclick="location.href='/med/<%=data.id%>';">수정하기</button>
                                     <form action="/med/<%= data._id %>?_method=delete" method="post">
                                         <button type="submit" class="btn btn-primary waves-effect waves-light w-md m-b-30" onclick="med_delete();">삭제하기</button>
