--- a/views/med_form.ejs
+++ b/views/med_form.ejs
@@ -94,8 +94,10 @@
                                                 <textarea class="form-control" rows="15" placeholder="내용입력" name="content"></textarea>
                                             </div>
 
-                                            <div class="form-group">
-                                                <input type="file" name="filetoupload" class="btn btn-success btn-sm w-sm waves-effect m-t-10 waves-light">파일 업로드
+                                            
+                                            <div class="fileupload btn btn-success waves-effect waves-light">
+                                                <span><i class="ion-upload m-r-5"></i>Upload</span>
+                                                <input type="file" class="upload" name="filetoupload">
                                             </div>
                                             <!--<div class="form-group">-->
                                             <!--    <div class="summernote">-->
