--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,11 +23,11 @@
                     <div class="col-lg-3"></div>
                     <div class="col-lg-6">
                             
-                        <form role="search" class="form-inline">
+                        <form role="search" class="form-inline" action='/' method='post'>
                                     
-                             <input type="text" class="form-control" placeholder="Search" style="width:90%;background-color:white; line-height:40px;height:40px;">
+                             <input type="text" name="q" class="form-control" placeholder="Search" style="width:90%;background-color:white; line-height:40px;height:40px;">
                              <a href=""><i class="fa fa-search"></i></a>
-                                        
+                                    
                         </form>
                     </div>            
                     <div class="col-lg-3"></div>            
@@ -37,7 +37,7 @@
                 
                 <div class="row">
                 
-                    <% for(var i=0; i<6; i++){%>
+                    <% for(var i=0; i<medinfo.length; i++){%>
                     <div class="col-md-4 col-sm-6" style="position: relative">    
                         <div class="text-center card-box" >
                             <div class="member-card" style="height:250px">
